# SPDX-FileCopyrightText: 2021 David Ruescas <david@sequenttech.io>
# SPDX-FileCopyrightText: 2022 Félix Robles <felix@sequenttech.io>
# SPDX-FileCopyrightText: 2022 Eduardo Robles <edu@sequenttech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "strand"
version = "0.1.0"
authors = [
  "David Ruescas <david@sequenttech.io>",
  "Eduardo Robles <edulix@sequenttech.io>"
]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# backends
curve25519-dalek = {version = "3", features = ["serde"]}
sha3 = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
num-modular = { version = "0.5", features = ["num-bigint"] }
rug = { version = "1.16", default-features = false, features = ["integer", "rand"], optional = true }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
# rng
rand = { package="rand", version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
# aes
cbc = { version="0.1", features=["alloc"] }
aes = "0.8"
# wasm
wasm-bindgen-rayon = {version = "1.0.3", features = ["no-bundler"], optional = true}
wasm-bindgen = {version = "=0.2.79", optional = true}
serde-wasm-bindgen = {version = "0.4", optional = true}
# borsh
borsh = "0.9.3"

# static_init = "1.0"
web-sys = { version = "0.3", features = ['Performance'], optional = true }
ed25519-dalek = {version = "1", features = ["serde"]}
quick-error = "2.0"
rayon = { version = "1.5", optional = true }
hex = { version = "0.4.2", optional = true }

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O4']

cfg-if = "1.0"

[features]
rayon = ["dep:rayon"]
wasmrayon = ["rayon", "wasm", "dep:wasm-bindgen-rayon"]
wasmtest = ["wasm", "dep:web-sys", "dep:hex"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
rug = ["dep:rug"]

[dev-dependencies]
criterion = {version = "0.3", features=["html_reports"]}
serde_json = "1.0"

[build-dependencies]
rustc_version = "0.4.0"

[[bench]]
name = "shuffle"
harness = false
bench = false

[[bench]]
name = "encrypt"
harness = false
bench = false
