# SPDX-FileCopyrightText: 2021 David Ruescas <david@sequentech.io>
# SPDX-FileCopyrightText: 2022 Félix Robles <felix@sequentech.io>
# SPDX-FileCopyrightText: 2022 Eduardo Robles <edu@sequentech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "strand"
version = "0.2.0"
authors = [
  "David Ruescas <david@sequenttech.io>",
  "Eduardo Robles <edulix@sequenttech.io>"
]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[features]
rayon = ["dep:rayon"]
wasmrayon = ["rayon", "wasm", "dep:wasm-bindgen-rayon"]
wasmtest = ["wasm", "dep:web-sys"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
rug = ["dep:rug"]

[dependencies]

# Backends
# The dalek simd_backend feature requires nightly (also requires 
# RUSTFLAGS="-C target_feature=+avx2" to select avx2)
# curve25519-dalek = {version = "3", features = ["simd_backend"]}
curve25519-dalek = {version = "3"}
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
num-modular = { version = "0.5", features = ["num-bigint"] }
rug = { version = "1.16", default-features = false, features = ["integer", "rand"], optional = true }

# Signatures
ed25519-zebra = "3.1.0"

# Hashing 
sha2 = "0.9"

# Needed for extendable hashing function when deriving generators for ristretto
sha3 = "0.10"

# Serialization
borsh = "0.9.3"
base64 = "0.21"

# RNG
rand = { package="rand", version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }

# WASM
wasm-bindgen-rayon = {version = "1.0.3", features = ["no-bundler"], optional = true}
wasm-bindgen = {version = "=0.2.79", optional = true}
serde-wasm-bindgen = {version = "0.4", optional = true}
web-sys = { version = "0.3", features = ['Performance'], optional = true }

rayon = { version = "1.5", optional = true }
cfg-if = "1.0"
thiserror = "1.0.38"

# Only needed for wasm demo
serde = { version = "1.0", features = ["derive"] }

# Used for debug impl and demo
hex = { version = "0.4.2" }

[dependencies.malachite]
version = "0.3.1"
default-features = false
features = [ "naturals_and_integers" ]

[dev-dependencies]
criterion = {version = "0.5", features=["html_reports"]}
serde_json = "1.0"

[build-dependencies]
rustc_version = "0.4.0"

[[bench]]
name = "shuffle"
harness = false
# remove this to run benchmark
bench = false

[[bench]]
name = "encrypt"
harness = false
# remove this to run benchmark
bench = true